--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    html, body {
-      width: 100%; height: 100%;
-      margin: 0; padding: 0;
-      background-color: #333;
-    }
-
-    canvas {
-      display: block;
-      width: 100%; height: 100%;
-    }
-
-  </style>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/webgl-utils.js"></script>
 
   <title>WebGL playground</title>
 </head>
 
 <body>
 
-  <canvas></canvas>
+  <canvas id="canvas"></canvas>
 
+
+  <!-- WebGL vertex shader -->
+  <script id="2d-vertex-shader" type="x-shader/x-vertex">
+    attribute vec2 a_position;
+
+    void main() {
+      gl_Position = vec4(a_position, 0, 1);
+    }
+  </script>
+
+  <!-- WebGL fragment shader -->
+  <script id="2d-fragment-shader" type="x-shader/x-fragment">
+    void main() {
+      gl_FragColor = vec4(0.3, 0.3, 0.7, 1);
+    }
+  </script>
+
+  <script src="js/app.js"></script>
 </body>
 </html>
