--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
 
     void main() {
-      gl_Position = vec4(toClipSpace(a_position), 0, 1);
+      gl_Position = vec4(toClipSpace(a_position) * vec2(1, -1), 0, 1);
     }
   </script>
 
