--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <canvas id="canvas"></canvas>
+  <canvas id="canvas" width="800px" height="800px"></canvas>
 
 
   <!-- WebGL vertex shader -->
